--- a/sensor_fusion_perception/package.xml
+++ b/sensor_fusion_perception/package.xml
@@ -14,6 +14,10 @@
   <depend>cv_bridge</depend>
   <depend>pcl_conversions</depend>
   <depend>pcl_ros</depend>
+  <depend>ros2_numpy</depend>
+  <depend>geometry_msgs</depend>
+  <depend>tf2_ros</depend>
+  <depend>tf2_geometry_msgs</depend>
   <depend>rmw_cyclonedds_cpp</depend>
 
   <test_depend>ament_lint_auto</test_depend>
