--- a/multi_sensor_fusion/package.xml
+++ b/multi_sensor_fusion/package.xml
@@ -11,6 +11,10 @@
 
   <depend>sensor_msgs</depend>
   <depend>rclcpp</depend>
+  <depend>tf2</depend>
+  <depend>pcl_conversions</depend>
+  <depend>tf2_geometry_msgs</depend>
+  <depend>tf2_ros</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
